--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<br><br><br><br>
 		<img src="..\assert\img\Kurisu TV.png"  alt="Null" class="responsive-image"</img>
 		<br><br><br>
-		<a href='#' style="text-decoration:none">
+		<a href='https://github.com/VikramadityaDev/Kurisu-TV/releases/tag/v1.0.0' style="text-decoration:none">
 		<button type="button">DOWNLOAD<img src="..\assert\img\arrow.png"></button></a>
 		<br>
 		<a href='https://telegram.me/VikiMediaOfficial' style="text-decoration:none">
